tests/NormalTests/paczka2/big_fuzzy/41040379.err
Error in line 11: Tflso6lOpSJ S446 82,0
Error in line 6: wJqHbUs A372 72,9
Error in line 13: 3gYvHrs S446 130,0
Error in line 42: NCCc S446 36,0
Error in line 43: NCCc S941 18,1
Error in line 45: NCCc A372 -1,8
Error in line 51: G4GnIkG S941 1,7
Error in line 44: NCCc A372 11,3
Error in line 64: 3gYvHrs A372 41,0
Error in line 70: Tflso6lOpSJ A372 99,2
Error in line 76: G4GnIkG S973 81,1
Error in line 62: A372 A372 163,0
Error in line 80: Tflso6lOpSJ S973 5,1
Error in line 86: Tflso6lOpSJ S941 88,1
Error in line 91: Tflso6lOpSJ A372 39,9
Error in line 93: G4GnIkG S446 32,5
Error in line 102: A372 A372 209,72
Error in line 99: G4GnIkG S941 46,0
Error in line 103: Tflso6lOpSJ S941 97,8
Error in line 108: Tflso6lOpSJ S446 10,0
Error in line 115: wJqHbUs A372 77,2
Error in line 120: wJÆHbUs S941 145,5
Error in line 118: A372 S446 48,6
Error in line 111: Tflso6lOpSJ A372 53,8
Error in line 126: 3gYvHrs S941 72,0
Error in line 133: oirSDggr46I S941 74,1
Error in line 138: G4GnIkG A372 73,2
Error in line 129: Tflso6lOpSJ S941 33,8
Error in line 117: wJqHbUs S941 382,0
Error in line 158: 3gYvHrs S446 50,3
Error in line 160: Tflso6lOpSJ S973 54,7
Error in line 162: 3gYvHrs A372 89,9
Error in line 172: wJqHbUs S973 222,83
Error in line 173: Tflso6lOpSJ S941 43,7
Error in line 178: Tflso6lOpSJ S973 9,5
Error in line 187: 3gYvHrs S941 96,4
Error in line 184: G4GnIkG S941 24,8
Error in line 146: A372 A372 151,2
Error in line 197: Tflso6lOpSJ A372 73,6
Error in line 202: Tflso6lOpSJ S973 60,0
Error in line 207: oirSDggr46I A372 46,6
Error in line 211: NCCc S973 96,0
Error in line 216: 3gYvHrs S941 79,4
Error in line 229: 3gYvHrs A372 50,5
Error in line 238: Tflso6lOpSJ A372 66,5
